--- a/index.html
+++ b/index.html
@@ -19,10 +19,23 @@
       }
     };
   </script>
+  <style>
+    body.light {
+      background-color: #f9fafb !important;
+      color: #1a202c !important;
+    }
+    body.light .bg-background { background-color: #f9fafb !important; }
+    body.light .bg-card { background-color: #ffffff !important; }
+    body.light .text-text { color: #1a202c !important; }
+  </style>
 </head>
 <body class="bg-background text-text font-sans">
   <div class="container mx-auto p-4">
     <h1 class="text-3xl font-bold text-center mb-4">⚽ Partidos de Fútbol</h1>
+    <div class="flex justify-center gap-4 mb-4">
+      <button id="themeToggle" class="px-4 py-1 rounded bg-gray-700 text-white hover:bg-primary">Modo Claro</button>
+      <button id="reloadButton" class="px-4 py-1 rounded bg-gray-700 text-white hover:bg-primary">Recargar</button>
+    </div>
 
     <!-- Botones de fecha -->
     <div id="dateButtons" class="flex flex-wrap justify-center gap-2 mb-6"></div>
@@ -179,6 +192,29 @@
       });
     }
 
+    const themeToggle = document.getElementById('themeToggle');
+    const reloadButton = document.getElementById('reloadButton');
+
+    function applyTheme() {
+      const theme = localStorage.getItem('theme') || 'dark';
+      if (theme === 'light') {
+        document.body.classList.add('light');
+        themeToggle.textContent = 'Modo Oscuro';
+      } else {
+        document.body.classList.remove('light');
+        themeToggle.textContent = 'Modo Claro';
+      }
+    }
+
+    themeToggle.onclick = () => {
+      const isLight = document.body.classList.toggle('light');
+      localStorage.setItem('theme', isLight ? 'light' : 'dark');
+      themeToggle.textContent = isLight ? 'Modo Oscuro' : 'Modo Claro';
+    };
+
+    reloadButton.onclick = fetchAndRenderMatches;
+
+    applyTheme();
     generateDateButtons();
     fetchAndRenderMatches();
   </script>
